sql/test/unit/checks/aggr_no_group_check_and_agg_fail.exp
create table if not exists aggr(g integer, x integer);
delete from aggr;
insert into aggr values (0,0), (0,1), (0,2), (1,0);
SELECT CHECK(count(*) > 4), count(*) as n from aggr;
^
|
 ----- ERROR
Error: line 4, character 0:
Failed constraint: count() > 4
